# flashcard-generator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.example.toml  pyproject.toml
docs/: README.md
docs/card_types/: card_types.md  considerations.md  final-plan.md  implementation-plan.md
docs/guide/: documentation.md
docs/specs/: PRD-v1.md  implementation_plan_v1.md  personal_anki_builder_spec_v2.md
docs/status/: implementation-status.md
docs/testing/: manual-verification.md  testing-plan.md
plans/: considerations_v1.1-fallback-and-visino.md  v1.1-fallback-and-vision.md
src/anki_builder/: __init__.py  cli.py  config.py  models.py  stemming.py
src/anki_builder/anki/: __init__.py  connect.py  model.py  push.py
src/anki_builder/db/: __init__.py  build.py  queries.py  schema.sql
src/anki_builder/dictionary/: __init__.py  freedict.py
src/anki_builder/llm/: __init__.py  client.py  tts.py  vision.py
src/anki_builder/pipeline/: __init__.py  cards.py  fallback.py  gloss.py  rank.py  search.py  select.py
src/anki_builder/review/: __init__.py  server.py
src/anki_builder/review/static/: index.html
src/anki_builder/tatoeba/: __init__.py  audio.py  dumps.py
tests/: conftest.py  test_anki.py  test_audio.py  test_build.py  test_cards.py  test_dictionary.py  test_fallback.py  test_filter_rank.py  test_queue.py  test_review.py  test_search.py  test_vision.py
