[project]
name = "anki-builder"
version = "0.1.0"
description = "Personal Anki card builder (Spanish, corpus-driven from Tatoeba)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "snowballstemmer>=2.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
anki-builder = "anki_builder.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
